docs: update Phase 3 planning to reflect completed work
- Mark Phase 3 complete in ROADMAP and STATE
- Replace hover-to-pause with click-to-toggle across all docs
- Update REQUIREMENTS traceability (Phase 2+3 requirements marked complete)
- Add 03-04-SUMMARY.md documenting controls, FAB, and polish work
- Add revision notes to 03-04-PLAN.md for key deviations

--- a/.planning/phases/03-overlay-and-auto-scroll/03-04-PLAN.md
+++ b/.planning/phases/03-overlay-and-auto-scroll/03-04-PLAN.md
@@ -4,22 +4,31 @@ plan: 04
 type: execute
 wave: 3
 depends_on: ["03-02", "03-03"]
+status: COMPLETE (revised during execution — see 03-04-SUMMARY.md for actual outcome)
 files_modified:
   - src/overlay/App.tsx
   - src/overlay/hooks/useOverlayControls.ts
 autonomous: false
+
+# REVISION NOTES (2026-02-16):
+# - Hover-to-pause replaced with click-to-toggle (hover conflicts with click interactions)
+# - Bracket keys replaced with Cmd/Ctrl +/- for font size; plain +/- for opacity
+# - Global shortcuts remapped: S→F (overlay), D→S (speed), A→R (rewind)
+# - Editor FAB and multi-monitor cycling added (not in original plan)
+# - Top-edge fade removed
+# - See 03-04-SUMMARY.md for complete deviation log
 
 must_haves:
   truths:
     - "User can play/pause scrolling with a keyboard shortcut (space locally, Cmd+Shift+Space globally)"
     - "User can cycle through speed presets (slow/medium/fast) with a brief on-screen indicator"
     - "User can manually scroll up/down using keyboard shortcuts"
-    - "User can rewind one sentence at a time with a keyboard shortcut"
-    - "Hovering the mouse over the overlay content instantly freezes scrolling; moving away resumes"
+    - "User can rewind in the script with a keyboard shortcut"
+    - "Clicking the overlay content area toggles play/pause (click-to-toggle)"
     - "User can adjust font size and opacity via keyboard shortcuts, and these persist across restarts"
   artifacts:
     - path: "src/overlay/hooks/useOverlayControls.ts"
-      provides: "Local keyboard event handlers and hover-to-pause logic for overlay window"
+      provides: "Local keyboard event handlers and click-to-toggle logic for overlay window"
       exports: ["useOverlayControls"]
       min_lines: 40
     - path: "src/overlay/App.tsx"
